Update tests for services